--- a/loja virtual.html
+++ b/loja virtual.html
@@ -18,7 +18,7 @@
 
 
     <title>loja virtual</title>
-
+<link rel="stylesheet" href="noiva.html">
 
     <link rel="stylesheet" href="loja virtual.css">
 
@@ -47,7 +47,7 @@
                         <ul>
 
 
-                            <li><a href="#Home">Home</a></li>
+                            <li><a href="noiva.html">Home</a></li>
 
 
                             <li><a href="#About">Novidades</a></li>
@@ -73,7 +73,7 @@
                         <ul id="myLinks">
 
 
-                            <li><a href="#Home">Home</a></li>
+                            <li><a href="noiva.html">Home</a></li>
 
 
                             <li><a href="#About">Novidades</a></li>
