--- a/noiva.html
+++ b/noiva.html
@@ -29,7 +29,7 @@
                     <li class="nav__item"><a href="#services" class="nav__link">Serviços</a></li>
                     <li class="nav__item"><a href="#package" class="nav__link">Pacotes</a></li>
                     <li class="nav__item"><a href="#gallery" class="nav__link">Nossos produtos</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Feedback das clientes</a></li>
+                    <li class="nav__item"><a href="#testimonials" class="nav__link">Feedback das clientes</a></li>
                 </ul>
             </div>
 <div class="nav__toggle" id="nav"> 
@@ -68,7 +68,7 @@
                                 
                                 <p>Orgulhamo-nos porque somos a loja de referência a nivél de preços de vestidos de noivas e  acessórios</p>
                                <br>
-                                <p>Desde a primeira visita na loja você tem um atendimento personalizado! Aqui no Cantinho das Noivas você pode provar os vestidos e comprovar que nossa modelagem se adapta muito bem ao seu corpo, sendo ele princesa, semi-sereia, evasê ou rodado.  A partir dai, nossa equipe inicia os ajustes e mudanças desejadas
+                                <p>Desde a primeira visita na loja você tem um atendimento personalizado! Aqui no Paraíso das Noivas você pode provar os vestidos e comprovar que nossa modelagem se adapta muito bem ao seu corpo, sendo ele princesa, semi-sereia, evasê ou rodado.  A partir dai, nossa equipe inicia os ajustes e mudanças desejadas
                                      pela noiva, até chegar ao seu vestido dos sonhos.
 
                                     No final de todo o processo, você poderá se olhar no espelho e vislumbrar o grande dia, além é claro de se apaixonar por esse momento tão único e especial!</p>
@@ -121,13 +121,13 @@
                     <div class="box">
                         <div class="inner">
                             <img src="assests/img/servicos/vest.png" alt="">
-                            <p> Vends Vestidos de noiva</p>
+                            <p> Venda Vestidos de noiva</p>
                         </div>
                     </div>
                     <div class="box">
                         <div class="inner">
                             <img src="assests/img/servicos/depilacao.png" alt="">
-                            <p>depiliação com cera</p>
+                            <p>Depiliação com cera</p>
                         </div>
                     </div>
                     <div class="box">
@@ -208,7 +208,7 @@
                             </div>
                             <div class="item">
                                 <i class='bx bx-message-square-check check__icon' ></i>
-                                <p>Buque<span>(TULIPAS)</span></p>
+                                <p>Buque<span>(Rosas)</span></p>
                             </div>
                             <div class="item">
                                 <i class='bx bx-message-square-check check__icon' ></i>
@@ -364,7 +364,7 @@
                 <button class="btn" >ver mais</button>
             </div>
         </section>
-        <section class="testimonials section">
+        <section class="testimonials section" id="testimonials">
             <div class="testimonials__content">
                 <div class="row">
                     <div class="section__title">
